singup header footer

--- a/EBankingApp/src/app/header/header.component.html
+++ b/EBankingApp/src/app/header/header.component.html
@@ -1,5 +1,5 @@
-<div class="navbar-brand">
-    <a class="navbar-item">
-      <img src="/assets/cdf.png">
+<div class="header">
+    <a class="header-logo">
+      <img src="/assets/images/logotag.png" (click) = "redirect()">
     </a>
   </div>
