--- a/EBankingApp/src/app/login/login.component.html
+++ b/EBankingApp/src/app/login/login.component.html
@@ -2,7 +2,7 @@
    
   <div class ="sign-in">
     <mat-card-actions>
-        <button mat-raised-button (click)="sign()" color="primary">Click here to Sign-in</button>
+        <button mat-raised-button (click)="sign()" color="primary">Click here to Sign-In</button>
       </mat-card-actions>
     </div>
   <div class="login-header">
